create myfutue.html and myjourney,Improve Assignment a little bit

--- a/index.html
+++ b/index.html
@@ -2,32 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CSTU Story</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <div class="topic">
         <h1>My CSTU Story</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="journey.html">My Journey</a></li>
+                <li><a href="future.html">My Future</a></li>
+            </ul>
+        </nav>
     </div>
-    <div style="display: flex ; justify-content: center;">
-        <video src="resources/myvdo.mp4"width="600" height="300" controls type="video/mp4"></video>
+
+    <div class="video-container">
+        <video src="resources/myvdo.mp4" controls></video>
     </div>
-        <h2 class="Top">This is Me</h2>
-        <div id="content">
-            <h3 "><b><center>Hello World</center></b></h3>
-                <p>My name is Wirapat Singpia.<br>My nickname is Boss. <br>I'm 18 years old</p>
-                <h5>My Contact</h5>
-                <p style="color: violet;">IG : <a href="https://www.instagram.com/_13x55/">_13x55 </a></p>
-                <p style="color: blue;">Facebook: <a href="https://www.facebook.com/bossgun.ch">Wirapat Singpia</a></p>
-            <img src="resources/d.jpg" class="right">
-            <a href="https://cs.sci.tu.ac.th/"><img src="https://shorturl.at/mTyaS" class="left"></a>
-        </div>
 
+    <div id="content">
+        <p>My name is Wirapat Singpia.<br>My nickname is Boss.<br>I'm 18 years old</p>
+
+        <h5>My Contact</h5>
+        <p class="ig">IG: <a href="https://www.instagram.com/_13x55/">_13x55</a></p>
+        <p class="facebook">Facebook: <a href="https://www.facebook.com/bossgun.ch">Wirapat Singpia</a></p>
+
+        <img src="resources/d.jpg" class="right" alt="My Picture">
+
+        <a href="https://cs.sci.tu.ac.th/"><img src="https://shorturl.at/mTyaS" class="left" alt="CSTU"></a>
     </div>
-      
-    
 
-
+    <footer>
+        &copy; 2024 My CSTU Story. All rights reserved.
+    </footer>
 </body>
 </html>
