--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="journey.html">My Journey</a></li>
-                <li><a href="future.html">My Future</a></li>
+                <li><a href="myjourney.html">My Journey</a></li>
+                <li><a href="myfuture.html">My Future</a></li>
             </ul>
         </nav>
     </div>
