--- a/myfuture.html
+++ b/myfuture.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    
+    <div class="topic">
+        <h1>My CSTU Story</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="myjourney.html">My Journey</a></li>
+                <li><a href="myfuture.html">My Future</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
