Add sponsor and Daft My journey

--- a/myfuture.html
+++ b/myfuture.html
@@ -17,5 +17,10 @@
             </ul>
         </nav>
     </div>
+
+
+    <footer>
+        &copy; 2024 My CSTU Story. All rights reserved.
+    </footer>
 </body>
 </html>
