fisnish my journey

--- a/myfuture.html
+++ b/myfuture.html
@@ -17,7 +17,20 @@
             </ul>
         </nav>
     </div>
-
+    <div class="spon-container">
+        <a href="https://translate.google.com/?hl=en&tab=TT&sl=th&tl=en&op=translate"><img src="https://shorturl.at/FXx0m" class="spon" alt="translate"></a>
+        <a href="https://www.google.co.th/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png" class="spon" alt="google"></a>
+        <a href="https://chatgpt.com/"><img src="https://rb.gy/2nrrps" class="spon" alt="ChatGpt"></a>
+    </div>
+    <div class="content">
+        <section class="journey-section">
+    
+            <div class="container">
+                <p>Hello</p>
+               
+        </section>
+    </div>
+    </section>
 
     <footer>
         &copy; 2024 My CSTU Story. All rights reserved.
