--- a/myjourney.html
+++ b/myjourney.html
@@ -16,18 +16,15 @@
                 <li><a href="myfuture.html">My Future</a></li>
             </ul>
         </nav>
-    </div>
-    <section class="journey-section">
-        <div class="spon-container">
-            <a href="https://translate.google.com/?hl=en&tab=TT&sl=th&tl=en&op=translate"><img src="https://rb.gy/gyim71" class="spon" alt="translate"></a>
+    </div>        
+    <div class="spon-container">
+            <a href="https://translate.google.com/?hl=en&tab=TT&sl=th&tl=en&op=translate"><img src="https://shorturl.at/FXx0m" class="spon" alt="translate"></a>
             <a href="https://www.google.co.th/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png" class="spon" alt="google"></a>
-            <a href="https://translate.google.com/?hl=en&tab=TT&sl=th&tl=en&op=translate"><img src="https://rb.gy/2nrrps" class="spon" alt="ChatGpt"></a>
-            
-
-
-
-            
+            <a href="https://chatgpt.com/"><img src="https://rb.gy/2nrrps" class="spon" alt="ChatGpt"></a>
         </div>
+    <div class="content">
+    <section class="journey-section">
+
         <div class="container">
             <h1>My Journey - Year 1</h1>
             <p>Starting my journey in CSTU in my first year was a big change from school to university. I encountered many new things, such as new friends, teachers, and more intensive course content.</p>
@@ -45,6 +42,7 @@
             <p>In the coming years, I hope to further develop my programming skills and learn new technologies related to software development. I aim to join internships and research projects in order to gain real-world experience and apply the knowledge I gain to my future work.</p>
         </div>
     </section>
+</div>
     <footer>
         &copy; 2024 My CSTU Story. All rights reserved.
     </footer>
