--- a/myfuture.html
+++ b/myfuture.html
@@ -23,11 +23,17 @@
         <a href="https://chatgpt.com/"><img src="https://rb.gy/2nrrps" class="spon" alt="ChatGpt"></a>
     </div>
     <div class="content">
+        <a href="https://cs.sci.tu.ac.th/"><img src="https://shorturl.at/mTyaS" class="left" alt="CSTU"></a>
         <section class="journey-section">
-    
-            <div class="container">
-                <p>Hello</p>
-               
+            <h1>My Future</h1>
+            <p>
+                In a few years, I aim to
+                graduate with honors, specifically
+                a first-class degree, symbolizing the
+                effort and commitment I have put into my
+                education. After graduation, I dream of working for a top-tier global company to develop my skills in a challenging environment, learning from world-class professionals. 
+                Additionally, I aspire to open a café with my friends, which would allow me to apply my business knowledge gained from working in a leading organization. I plan to save money from my job to fund this entrepreneurial journey. While balancing work and entrepreneurship will be a significant challenge, I believe that with careful planning and determination, I can create a bright future and fulfill my career and business aspirations.
+            </p>
         </section>
     </div>
     </section>
