--- a/myjourney.html
+++ b/myjourney.html
@@ -24,8 +24,8 @@
         </div>
     <div class="content">
     <section class="journey-section">
-
-        <div class="container">
+        <a href="https://cs.sci.tu.ac.th/"><img src="https://shorturl.at/mTyaS" class="left" alt="CSTU"></a>
+        <div class="container" >
             <h1>My Journey - Year 1</h1>
             <p>Starting my journey in CSTU in my first year was a big change from school to university. I encountered many new things, such as new friends, teachers, and more intensive course content.</p>
             
