--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="video-container">
         <video src="resources/myvdo.mp4" controls></video>
     </div>
-
+    <section class="journey-section">
     <div id="content">
         <p>My name is Wirapat Singpia.<br>My nickname is Boss.<br>I'm 18 years old</p>
 
@@ -42,7 +42,7 @@
 
         <a href="https://cs.sci.tu.ac.th/"><img src="https://shorturl.at/mTyaS" class="left" alt="CSTU"></a>
     </div>
-
+</section>
     <footer>
         &copy; 2024 My CSTU Story. All rights reserved.
     </footer>
